# ManufacturingOS

./: README.md  agv_devriye.py  cartesian_welding_node.py  dans.py  dans_multi.py  dans_robot1.py  factory_orchestrator.py  go_home.py  modbus_bridge.py  robot_task_node.py  spawn_factory.sh
src/fanuc_m16ib_moveit_config/: CMakeLists.txt  package.xml
src/fanuc_m16ib_moveit_config/config/: kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/fanuc_m16ib_moveit_config/launch/: system.launch.py
src/fanuc_m16ib_moveit_config/srdf/: fanuc_m16ib.srdf
src/manufacturing_os_brain/: package.xml  setup.cfg  setup.py
src/manufacturing_os_core/: CMakeLists.txt  package.xml
src/manufacturing_os_description/: CMakeLists.txt  package.xml
src/manufacturing_os_description/config/: controllers.yaml
src/manufacturing_os_description/launch/: factory_multi.launch.py  fake_robot.launch.py
src/manufacturing_os_description/urdf/: agv.urdf
src/manufacturing_os_description/urdf/fanuc_m16ib/: m16ib20_macro.xacro  robot.urdf
src/manufacturing_os_description/urdf/motoman_gp8/: gp8_macro.xacro  robot.urdf  robot.urdf.xacro  robot1.urdf  robot2.urdf
src/manufacturing_robot_moveit_config/: CMakeLists.txt  package.xml
src/manufacturing_robot_moveit_config/config/: manufacturing_robot.srdf  moveit_controllers.yaml
src/manufacturing_robot_moveit_config/launch/: move_group.launch.py
